cambios de colores

--- a/static/sass/_utpl_final.scss
+++ b/static/sass/_utpl_final.scss
@@ -13,7 +13,8 @@
 $main-color: #f7691f;
 $dark-color: #ea281f; //Link Color
 $light-color: #f4e00c; //Selected Header BG Color, ie. calendar        ***Custom, not from palette***
-$bg-color: #f7fe81; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
+//$bg-color: #f7fe81; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
+$bg-color: blue; //Selected Content BG Color, ie. calendar          ***Custom, not from palette***
 
 //Main BG Color Variables
 $main-bg: #822537;
