--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -34,7 +34,7 @@
             )}
         </span></p>
         <div class="clear"></div>
-        <p class="copyright vcard">&copy; <span class="fn org">UTPL</span>, <span class="adr"> <span class="locality">San Cayetano Alto - Loja</span>, <span class="region">Ecuador</span> <span class="postal-code">Línea Gratuita 1800 0075 8875</span> </span></p>
+        <p>&copy; <span class="fn org">UTPL</span>, <span class="adr"> <span class="locality">San Cayetano Alto - Loja</span>, <span class="region">Ecuador</span> <span class="postal-code">Línea Gratuita 1800 0075 8875</span> </span></p>
 
     </div>
   </footer>
