modifico el abour

--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -39,7 +39,7 @@
 
 <section class="container about" style="width: auto;">
   <nav id="about-menu">
-    <a href="#about" class="about active">${_('Acerca')}</a>
+    <a href="#about" class="about active">${_('Acerca de')}</a>
     <a href="#careers" class="careers">${_('Careers')}</a>
     <a href="#contact" class="contact">${_('Contacto')}</a>
   </nav>
@@ -58,7 +58,9 @@
       <article>
         <h2>${_('About')}</h2>
 
-        <p>Your about text goes here!</p>
+       <p>La Universidad Técnica Particular de Loja (UTPL) apuesta por un modelo educativo basado en MOOCs, que fomente la autonomía y la interacción de los estudiantes y que permita evidenciar el aprendizaje a través de instrumentos de evaluación y que promuevan la responsabilidad del estudiante al momento de valorar el trabajo en el aula; y por ello ha diseñado, a través de la Dirección Modalidad de Educación a Distancia, Dirección General de Investigación y la Sección Departamental Tecnologías Avanzadas de la Web y Sistemas Basados en el Conocimiento, una serie de acciones para fomentar la creación y el desarrollo de MOOCs, que con el crecimiento de la demanda de la educación abierta y en línea, iniciativas de este tipo se han llegado a convertir en una opción en la que confían cientos e incluso miles de estudiantes en todo el mundo.
+
+Nuestro objetivo es promover la educación masiva a través de una plataforma adecuada.</p>
 
         <p>&nbsp;</p>
       </article>
