--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -40,7 +40,7 @@
 <section class="container about" style="width: auto;">
   <nav id="about-menu">
     <a href="#about" class="about active">${_('Acerca de')}</a>
-    <a href="#careers" class="careers">${_('Careers')}</a>
+    <!--<a href="#careers" class="careers">${_('Careers')}</a> -->
     <a href="#contact" class="contact">${_('Contacto')}</a>
   </nav>
 
@@ -58,9 +58,8 @@
       <article>
         <h2>${_('About')}</h2>
 
-       <p>La Universidad Técnica Particular de Loja (UTPL) apuesta por un modelo educativo basado en MOOCs, que fomente la autonomía y la interacción de los estudiantes y que permita evidenciar el aprendizaje a través de instrumentos de evaluación y que promuevan la responsabilidad del estudiante al momento de valorar el trabajo en el aula; y por ello ha diseñado, a través de la Dirección Modalidad de Educación a Distancia, Dirección General de Investigación y la Sección Departamental Tecnologías Avanzadas de la Web y Sistemas Basados en el Conocimiento, una serie de acciones para fomentar la creación y el desarrollo de MOOCs, que con el crecimiento de la demanda de la educación abierta y en línea, iniciativas de este tipo se han llegado a convertir en una opción en la que confían cientos e incluso miles de estudiantes en todo el mundo.
-
-Nuestro objetivo es promover la educación masiva a través de una plataforma adecuada.</p>
+       <p align="justify">La Universidad Técnica Particular de Loja (UTPL) apuesta por un modelo educativo basado en MOOCs, que fomente la autonomía y la interacción de los estudiantes y que permita evidenciar el aprendizaje a través de instrumentos de evaluación y que promuevan la responsabilidad del estudiante al momento de valorar el trabajo en el aula; y por ello ha diseñado, a través de la Dirección Modalidad de Educación a Distancia, Dirección General de Investigación y la Sección Departamental Tecnologías Avanzadas de la Web y Sistemas Basados en el Conocimiento, una serie de acciones para fomentar la creación y el desarrollo de MOOCs, que con el crecimiento de la demanda de la educación abierta y en línea, iniciativas de este tipo se han llegado a convertir en una opción en la que confían cientos e incluso miles de estudiantes en todo el mundo.</p>
+<p alingh="justify"> Nuestro objetivo es promover la educación masiva a través de una plataforma adecuada.</p>
 
         <p>&nbsp;</p>
       </article>
@@ -98,7 +97,7 @@ Nuestro objetivo es promover la educación masiva a través de una plataforma ad
       <article id="stanford-OpenEdX-contact">
         <h2>${_('Contact Us')}</h2>
 
-        <p>Your contact information goes here!</p>
+        <p>Equipo MOOC UTPL: moocs@utpl.edu.ec</p>
 
         <p>&nbsp;</p>
       </article>
