--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -13,13 +13,13 @@
     <div class="colophon">
       <nav class="nav-colophon">
         <ol>
-          <li><a href="${reverse('about')}">About</a></li>
-          <li><a href="${reverse('about')}#careers">Careers</a></li>
-          <li><a href="${reverse('about')}#contact">Contact</a></li>
-          <li><a href="${reverse('tos')}">Terms of Service</a></li>
-          <li><a href="${reverse('tos')}#privacy">Privacy Policy</a></li>
-          <li><a href="${reverse('tos')}#honor">Honor Code</a></li>
-          <li><a href="${reverse('tos')}#copyright">Copyright</a></li>
+          <li><a href="${reverse('about')}">Acerca de</a></li>
+         <!--  <li><a href="${reverse('about')}#careers">Careers</a></li> -->
+          <li><a href="${reverse('about')}#contact">Contactos</a></li>
+          <li><a href="${reverse('tos')}">Términos de Servicio</a></li>
+          <li><a href="${reverse('tos')}#privacy">Políticas de Privacidad</a></li>
+          <li><a href="${reverse('tos')}#honor">Código de Honor</a></li>
+          <li><a href="${reverse('tos')}#copyright">Derechos de Autor</a></li>
         </ol>
       </nav>
     </div>
