--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -53,7 +53,7 @@
             Photo License: CC0 Public Domain (Free for commercial use / No attribution required)
             https://pixabay.com/en/book-books-circle-curly-education-2869/
         -->
-        <img src="${static.url('themes/utpl_final/images/about.jpg')}" alt="" />
+        <img src="${static.url('themes/utpl_final/images/utpl-logo.png')}" alt="" />
       </div>
       <article>
         <h2>${_('About')}</h2>
@@ -73,7 +73,7 @@
             Photo License: CC0 Public Domain (Free for commercial use / No attribution required)
             https://pixabay.com/en/man-corporate-businessman-suit-tie-871960/
         -->
-        <img src="${static.url('themes/utpl_final/images/careers.jpg')}" alt="" />
+        <img src="${static.url('themes/utpl_final/images/utpl-logo.png')}" alt="" />
       </div>
       <article>
         <h2>${_('Careers')}</h2>
@@ -92,7 +92,7 @@
             Photo License: CC0 Public Domain (Free for commercial use / No attribution required)
             https://pixabay.com/en/network-cobweb-dewdrop-586177/
         -->
-        <img src="${static.url('themes/utpl_final/images/contact.jpg')}" alt="" />
+        <img src="${static.url('themes/utpl_final/images/utpl-logo.png')}" alt="" />
       </div>
       <article id="stanford-OpenEdX-contact">
         <h2>${_('Contact Us')}</h2>
