--- a/static/sass/_utpl_final.scss
+++ b/static/sass/_utpl_final.scss
@@ -24,7 +24,8 @@ $main-bg-25: lighten($main-bg, 25%);
 
 //Secondary Color Variables
 //$secondary: #b5a4b7;
-$secondary: white; //fondo
+//$secondary: white; //fondo
+$secondary: #fdfaf7;
 $secondary-50: lighten($secondary, 9%);
 $secondary-25: lighten($secondary, 20%); //Important Heading BG Color 
 
@@ -66,7 +67,8 @@ $serif: $theme-serif-font, $serif;
 //-----------------
 
 $body-bg: $gray-1;
-$container-bg: $gray-1;
+//$container-bg: $gray-1;
+$container-bg: transparentize(lighten($secondary, 18.5%), .25);
 $login-register-bg: $gray-1;
 $content-wrapper-bg: $gray-1;
 $header-image: none;
@@ -194,7 +196,8 @@ $footer_margin: ($baseline/4) 0;
 //  CSS BG Images
 //-----------------
 // $homepage-bg-image: url('../themes/default/images/sunrise.jpg');
-$homepage-bg-image: url('../themes/utpl_final/images/img-pano.jpg');
+//$homepage-bg-image: url('../themes/utpl_final/images/img-pano.jpg');
+$homepage-bg-image: none;
 //$homepage-bg-image: url('http://serendipity.utpl.edu.ec/static/imgs/serendipity.jpg');
 $login-banner-image: none;
 $register-banner-image: none;
@@ -231,7 +234,7 @@ html {
      height: 300px !important;
 
     .outer-wrapper {
-        padding: 120px 0 !important;
+        padding: 0px 0px !important;
     }
 }
 
@@ -301,13 +304,14 @@ header.global {
     //border: 1px solid #ff9469;
     //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
     //box-sizing: border-box;
-    min-height: 150px !important;
+    min-height: 300px !important;
     min-width: 700px !important;
-    margin-left: 50px !important;
+    margin-left: 0px !important;
     padding: 0px 0px !important;
     //position: relative;
     transition: all 0.6s linear 0s !important;
     vertical-align: top !important;
+    float: none !important;
 }
 
 .home > header .media .hero {
@@ -315,8 +319,61 @@ header.global {
     height: 70%;
     background: #fdfaf7 url("../themes/utpl_final/images/logo-open-campus.png") no-repeat scroll center center / cover !important;
 }
+//CREACIÓN DE BLOQUES DE INDEX
+
+.home > header .title {
+    background: #fdfaf7 none repeat scroll 0 0;
+    //border: 1px solid #ff9469;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+    min-height: 300px !important;
+    min-width: 700px !important;
+    margin-left: 40px !important;
+    padding: 0px 0px !important;
+    //position: relative;
+    transition: all 0.6s linear 0s !important;
+    vertical-align: top !important;
+    float: none !important;
+}
 
 
+//BLOQUES
+
+.bloque1 {
+    background: white none repeat scroll 0 0;
+    border: 1px  solid #ff9469;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+}
+
+.bloque2 {
+    background: white none repeat scroll 0 0;
+    //border: 1px solid #ff9469;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+}  
+
+.bloque3 {
+    background: white none repeat scroll 0 0;
+    border: 1px solid #ff9469;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+}  
+
+.bloque4 {
+    background: white none repeat scroll 0 0;
+    border: 1px solid #ff9469;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+}  
+
+//COURSES SEARCH UTPL
+.courses_utpl{
+    padding-top: 80px !important;
+}
+
+
+//CARRUSEL
 
 /* Here's where our carousel begins, with the main wrapper being
 relatively positioned, so that our absolutely positioned items are
@@ -345,7 +402,7 @@ in the right place. */
     width: 50px;
     height: 100%;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    background: url("../themes/utpl_final/images/logo-open-campus.png") 50% 50% / 20px no-repeat;
+    background: url("../themes/utpl_final/images/pulsante_izquierda.png") 50% 50% / 20px no-repeat;
     //background: url("/carousel-arrow-dark.png") 50% 50% / 20px no-repeat;
 
       /* Let's put our arrow to go back on the left. */
@@ -368,7 +425,7 @@ in the right place. */
       .arrow {
         //background: url("/carousel-arrow-light.png") 50% 50% / 20px no-repeat;
 
-    	background: url("../themes/utpl_final/images/logo-open-campus.png") 50% 50% / 20px no-repeat;
+    	background: url("../themes/utpl_final/images/pulsante_derecho.png") 50% 50% / 20px no-repeat;
       }
     }
 
