--- a/static/sass/_utpl_final.scss
+++ b/static/sass/_utpl_final.scss
@@ -321,21 +321,6 @@ header.global {
 }
 //CREACIÓN DE BLOQUES DE INDEX
 
-.home > header .title {
-    background: #fdfaf7 none repeat scroll 0 0;
-    //border: 1px solid #ff9469;
-    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
-    //box-sizing: border-box;
-    min-height: 300px !important;
-    min-width: 700px !important;
-    margin-left: 40px !important;
-    padding: 0px 0px !important;
-    //position: relative;
-    transition: all 0.6s linear 0s !important;
-    vertical-align: top !important;
-    float: none !important;
-}
-
 
 //BLOQUES
 
@@ -366,6 +351,17 @@ header.global {
     //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
     //box-sizing: border-box;
 }  
+
+.border_bloques {
+    background: #FFEBCD none repeat scroll 0 0 !important;
+    border: 1px solid #4682B4 !important;
+    //box-shadow: 0 4px 25px 0 rgba(0, 0, 0, 0.5);
+    //box-sizing: border-box;
+}
+
+.border_bloques > img {
+   height: 100px;
+}
 
 //COURSES SEARCH UTPL
 .courses_utpl{
