--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -58,10 +58,9 @@
       <article>
         <h2>${_('About')}</h2>
 
-       <p align="justify">La Universidad Técnica Particular de Loja (UTPL) apuesta por un modelo educativo basado en MOOCs, que fomente la autonomía y la interacción de los estudiantes y que permita evidenciar el aprendizaje a través de instrumentos de evaluación y que promuevan la responsabilidad del estudiante al momento de valorar el trabajo en el aula; y por ello ha diseñado, a través de la Dirección Modalidad de Educación a Distancia, Dirección General de Investigación y la Sección Departamental Tecnologías Avanzadas de la Web y Sistemas Basados en el Conocimiento, una serie de acciones para fomentar la creación y el desarrollo de MOOCs, que con el crecimiento de la demanda de la educación abierta y en línea, iniciativas de este tipo se han llegado a convertir en una opción en la que confían cientos e incluso miles de estudiantes en todo el mundo.</p>
-<p alingh="justify"> Nuestro objetivo es promover la educación masiva a través de una plataforma adecuada.</p>
+<p align="justify">OpenCampus es una plataforma que oferta cursos en línea, y que se ponen disponibles, a través de Internet, de forma abierta y libre. Con <a href='http://twitter.com/opencampus_go' target='_blank'>OpenCampus</a>, educadores y formadores pueden diseñar sus cursos, probar nuevas formas de aprendizaje, establecer retos que permitan hacer analítica de aprendizaje, y ofertar a estudiantes de cualquier lugar del mundo. Además, los expertos en tecnología puede construir componentes de aprendizaje y contribuirlos como nuevas características de la plataforma, de manera que apoyen a la creación de soluciones educativas innovadoras que beneficien a profesores, estudiantes y autodidactas de cualquier parte del mundo.</p>
 
-        <p>&nbsp;</p>
+       <p>&nbsp;</p>
       </article>
       <hr class="fade-right-hr-divider">
     </section>
@@ -97,7 +96,7 @@
       <article id="stanford-OpenEdX-contact">
         <h2>${_('Contact Us')}</h2>
 
-        <p>Equipo MOOC UTPL: moocs@utpl.edu.ec</p>
+        <p>Equipo OpenCampus: opencampus@utpl.edu.ec</p>
 
         <p>&nbsp;</p>
       </article>
