--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -5,7 +5,7 @@
 
 ## TODO: this will eventually be moved to the Sass
 <%block name="navigation_logo">
-  <img src="${static.url('themes/utpl_final/images/utpl-logo.png')}" height="80" alt="Home Page" />
+  <img src="${static.url('themes/utpl_final/images/openCampus_logo.png')}" height="65px" alt="Home Page" />
 </%block>
 
 
